source/webapp/sites/all/themes/checkbook3/css/global.css
/* ... */
.page-spending-landing .bottomContainer h1 {
    font-size: 28px;
    font-weight: bold;
    color: #3c5e7c;
    margin-bottom: 0;
    text-align: left;
    text-transform: none;
}
h2 {
    font-size:28px;
    font-weight: bold;
    color: #3c5e7c;
}
.tableHeader{
    clear:both;
    width:100%;
}
.tableHeader h2{
    font-size:20px;
}
.tableHeader h3{
    float:left;
}
h2.chart-title {
    font-size:18px;
    text-align: center;
    margin-top:11px;
}
h3 {
    color: #3C5E7C;
    font-size:20px;
    font-weight: bold;
    margin-bottom: 12px;
    text-transform: uppercase;
}
h4 {
    font-size: 15px;
    font-weight: bold;
    color: #3C5E7C;
    margin-bottom: 16px;
    text-transform: uppercase;
}

/**********************
***   HEADER AREA   ***
**********************/
#section-header{margin-bottom:26px;}
#region-header-first {
    padding:0px 10px;
    margin:0px;
}
#zone-branding-wrapper {
    background: url("../images/header-bg.png") repeat-x scroll 0 0 transparent;
    height: 48px;
}
#region-branding{
    width:100%;
    margin:0px;
}
#zone-branding-wrapper .logo-img{
    float:left;
    margin-left:10px;
}
#zone-branding-wrapper .comptroller{
    float:right;
    margin:5px 10px 0px 0px;
}
#social-media{

    height:22px;
    font-size: 11px;
    background: #ffffff; /* Old browsers */
    background: -moz-linear-gradient(top,  #ffffff 0%, #e1e1e1 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e1e1e1)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  #ffffff 0%,#e1e1e1 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  #ffffff 0%,#e1e1e1 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  #ffffff 0%,#e1e1e1 100%); /* IE10+ */
    background: linear-gradient(to bottom,  #ffffff 0%,#e1e1e1 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e1e1e1',GradientType=0 ); /* IE6-9 */

}
.addthis_toolbox{
    float:right;
    margin-top:3px;
    width:107px;
}

/********************
***   MAIN MENU   ***
********************/
#region-menu{
    width:100%;
    margin:0px;  
}
#nice-menu-1 {
    background: url("../images/main-nav-bg.png") repeat-x scroll 0 0;
    width: 100%;
    height: 40px;
    z-index: 50;
}
#nice-menu-1 li{
    background-color: #eee;
    width: 250px;
}
#nice-menu-1 a, #nice-menu-1 span {
    font-size: 14px;
    color: #4d4d4d;
    padding: 8px 10px;
    cursor: pointer;
}
#nice-menu-1 > li a.active, #nice-menu-1 > li a:hover, #nice-menu-1 > li span.active, #nice-menu-1 > li span:hover {
    background: none repeat scroll 0 0 transparent;
    color: #2A639A;
    text-decoration: none;
}
#nice-menu-1 > li {
    border:none;
    background-color:transparent;
    background-image:none;
    cursor: pointer;
    width:auto;
}
#nice-menu-1 > li > a, #nice-menu-1 > li > span {
    float: left;
    font-weight: bold;
    padding: 13px 24px 10px;
    border-right:1px solid #cbcbcb;
}
#nice-menu-1 li ul {
    position: absolute;
    top: 40px;
}
#nice-menu-1 li ul li ul {
    position: absolute;
    top: -1px;
    left:250px;
}
#nice-menu-1 li ul li a, #nice-menu-1 li ul li span {
    float: none;
    display: block;
}
#nice-menu-1 > li li a.active,
#nice-menu-1 > li li a:hover,
#nice-menu-1 > li li span.active,
#nice-menu-1 > li li span:hover{
    background: #2d4c68;
    color: #fff;
}

/********************************
***   REGION FILTERS STYLES   ***
********************************/
#region-filters {
    background: url("../images/filter-bg.png") repeat-x scroll 0 0;
    width:100%;
    height:40px;
    margin:0px;
}

/* Agency Dropdown */
#block-block-4 {
    display:block;
    float: left;
}
.front #block-block-4,
.page-user #block-block-4 {
    display: none;
}

.agency-nav-dropdowns {
	display:block;
	float:left;
}
.agency-list-open {
    border-right: 1px solid #5387B7;
    color: #D8EEFC;
    width:160px;
    padding: 14px 0px 14px 16px;
    height: 12px;

}
#agency-list-other .agency-list-open{
    width:190px;
}
.agency-list-open span {
    background: url("../images/agency-list-arrow.png") no-repeat scroll 138px 3px transparent;
    cursor: pointer;
    padding-right: 31px;
    -moz-user-select: none;
    -khtml-user-select: none;
    user-select: none;
    line-height:12px;
    display:block;
}
#agency-list-other .agency-list-open span {
    background: url("../images/agency-list-arrow.png") no-repeat scroll 169px 3px transparent;
}
.agency-list-open span.open {
    background: url("../images/agency-list-arrow-closed.png") no-repeat scroll 138px 1px transparent;
}
#agency-list-other .agency-list-open span.open {
    background: url("../images/agency-list-arrow-closed.png") no-repeat scroll 169px 3px transparent;
}
.agency-list-content {
    height:260px;
    width:820px;
    background-color:#eeeded;
    border: 1px solid #b9cbdc;
    box-shadow: 3px 1px 10px #aaa;
    -moz-box-shadow: 3px 1px 10px #aaa;
    -webkit-boz-shadow: 3px 1px 10px #aaa;
    position:absolute;
    z-index: 30;
    display:none;
}
.other-agency-list-content{
	height:160px;
	left:0px;
    overflow:hidden;
}
#agency-list ul,
#agency-list-other ul {
    background: none;
    float: left;
    margin-right: 3%;
    margin-top: 10px;
    width: 47%;
}
#agency-list li,
#agency-list-other li {
    list-style-type: disc;
    list-style-position: outside;
    line-height:18px;
}
#agency-list li a,
#agency-list-other li a {
    color: #2A639A;
    text-transform: uppercase;
}
.listContainer1 {
    width:100%;
    height:230px;
    float:left;
}
.other-agency-list-content .listContainer1{
	height:130px;
} 
.listContainer1 .agency-slide {
    margin: 0 24px 0 64px;
    padding: 0;
    width: 89%;
}
/* ... */

